refactor: data-driven music playlists, remove hardcoded campaign data
music-playlists.sh now reads a JSON spec (folder, playlist names,
tracks with search queries) instead of hardcoding Exodus playlists.
Deleted music-playlists-fill.sh — the main script is idempotent,
just re-run after adding albums. Bumped to v0.3.0.

--- a/defaults.yaml
+++ b/defaults.yaml
@@ -24,3 +24,8 @@ safari_tabs: true
 # Override in config.yaml for locale-specific filters (e.g. sync artifacts).
 event_filters:
   - "Cancelled"
+
+# Apple Music playlist automation.
+# jq required for JSON parsing (brew install jq).
+music:
+  folder: ""       # target folder playlist in Music.app (empty = top level, folder must exist)
